Alignment fixes on create/update voucher page(screenshots)

--- a/apps/web-giddh/src/app/voucher/voucher.component.scss
+++ b/apps/web-giddh/src/app/voucher/voucher.component.scss
@@ -2032,6 +2032,14 @@ span.eligible-ITC {
     }
 }
 
+.blnc-due {
+    display: flex;
+    justify-content: space-between;
+    .blnc-due-num {
+        width: 50%;
+        text-align: left;
+    }
+}
 @media (max-width: 767px) {
     .mobile-view-padding {
         padding: 0 15px;
@@ -2182,7 +2190,6 @@ span.eligible-ITC {
     }
 
     .balance-due-text {
-        text-align: right;
     }
 
     #actionPane .update-mode {
